--- a/style.css
+++ b/style.css
@@ -82,3 +82,53 @@ body {
     font-family:'Roboto', sans-serif;
 
 }
+
+.section__image{
+    float:left;
+}
+
+.section__aboutme{
+    margin-top: 350px;
+}
+
+.Info{
+    margin-top: 100px;
+    text-align: center;
+
+}
+.Info_text{
+    color:gray;
+
+}
+
+.Skills{
+    margin-top: 50px;
+    border: none;
+    background-color: red;
+    color: red;
+    height: 2px;
+}
+.Skills_text{
+    color:gray;
+}
+
+.otherInformation{
+    margin-top: 200px;
+    border: none;
+    background-color: red;
+    height: 2px;
+}
+
+.Footer{
+    margin-top: 200px;
+    background-color: white;
+}
+.Footer__image{
+
+}
+
+.Footer__Text{
+    color:black;
+    margin-left: 500px;
+
+}
